--- a/src/app/meus-dados/meus-dados.component.html
+++ b/src/app/meus-dados/meus-dados.component.html
@@ -1,6 +1,6 @@
-<ul li *ngFor="let dado of meusDados">
-      <li>nome: {{ dado.nome }} </li>
-      <li>Idade: {{ dado.idade }} </li>
-      <li>Estado: {{ dado.estado }}</li>
-      <li>Cidade: {{ dado.cidade }}</li>
+<ul *ngFor="let dados of meusDados">
+  <li>Meu Nome: {{dados.nome}}</li>
+  <li>Idade: {{dados.idade}}</li>
+  <li>Estado: {{dados.estado}}</li>
+  <li>Cidade: {{dados.cidade}}</li>
 </ul>
