Conteudo da semana

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
     <a routerLink="/interpolation">Interpolation</a>
     <a routerLink="/meusDados">Meus Dados</a>
     <a routerLink="/twoWay">TwoWay DataBinding</a>
+    <a routerLink="/inputProp">Input Property</a>
+    <a routerLink="/outputProp">Output Property</a>
+    <a routerLink="/ngIf">ngIf</a>
   </nav>
   <br/>
   <main>
