Aula sobre ngFor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     <a routerLink="/inputProp">Input Property</a>
     <a routerLink="/outputProp">Output Property</a>
     <a routerLink="/ngIf">ngIf</a>
+    <a routerLink="/ngFor">ngFor</a>
   </nav>
   <br/>
   <main>
