--- a/src/app/ng-for/ng-for.component.html
+++ b/src/app/ng-for/ng-for.component.html
@@ -1,1 +1,31 @@
-<p>ng-for works!</p>
+<!-- <div>
+    <h2>{{subTitulo}}</h2>
+    <ul>
+      <li *ngFor="let filme of filmes">
+        {{filme.titulo}} - {{filme.direcao}}
+      </li>
+    </ul>
+</div> -->
+
+<div>
+  <h2>{{subTitulo}}</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Titulo</th>
+        <th>Direção</th>
+        <th>Elenco</th>
+        <th>Ano Lançamento</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let filme of filmes">
+        <td>{{filme.titulo}}</td>
+        <td>{{filme.direcao}}</td>
+        <td>{{filme.elenco}}</td>
+        <td>{{filme.anoLancamento}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
