DIretivas de Atribuição

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
     <a routerLink="/outputProp">Output Property</a>
     <a routerLink="/ngIf">ngIf</a>
     <a routerLink="/ngFor">ngFor</a>
+    <a routerLink="/ngClass">ngClass</a>
+    <a routerLink="/ngStyle">ngStyle</a>
   </nav>
   <br/>
   <main>
