Estudo de Pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <a routerLink="/ngFor">ngFor</a>
     <a routerLink="/ngClass">ngClass</a>
     <a routerLink="/ngStyle">ngStyle</a>
+    <a routerLink="/pipe">Pipe</a>
   </nav>
   <br/>
   <main>
