Aula sobre forms e seus tipos template e model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
     <a routerLink="/ngClass">ngClass</a>
     <a routerLink="/ngStyle">ngStyle</a>
     <a routerLink="/pipe">Pipe</a>
+    <a routerLink="/formulario">Formulario</a>
+    <a routerLink="/formModel">Formulario Model</a>
   </nav>
   <br/>
   <main>
